--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,44 @@
 html, body {
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 }
 
+#intro {
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background: #f8f8f8;
+}
+
+.intro-title {
+	position: absolute;
+	top: 64px;
+	left: 0;
+	width: 100%;
+	text-align: center;
+}
+
+.intro-start {
+	position: absolute;
+	bottom: 80px;
+	left: 50%;
+	height: 80px;
+	width: 110px;
+	margin-left: -55px;
+}
+
+.credits {
+	position: absolute;
+	bottom: 16px;
+	left: 50%;
+	width: 220px;
+	margin-left: -110px;
+	text-align: center;
+}
+
+.heart {
+	color: #f4425f;
+}
